inrgess/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: kiali
  namespace: istio-system
spec:
  rules:
    - host: kiali.kubernetes.docker.internal
      http:
        paths:
          - backend:
              serviceName: kiali
              servicePort: 20001
            path: /
